--- a/src/hw02/q02.css
+++ b/src/hw02/q02.css
@@ -1,9 +1,10 @@
 .container-1 {
-  width: 100px;
   height: 100px;
   background-color: red;
   color: white;
   text-align: center;
+  grid-area: 1 / 1 / span 3 / span 3;
+  order: 1;
 }
 
 .container-2 {
@@ -12,14 +13,16 @@
   background-color: blue;
   color: white;
   text-align: center;
+  order: 3;
 }
 
 .container-3 {
   width: 100px;
   height: 100px;
-  background-color: lightgreen;
+  background-color: greenyellow;
   color: white;
   text-align: center;
+  order: 4;
 }
 
 .container-4 {
@@ -28,6 +31,7 @@
   background-color: black;
   color: white;
   text-align: center;
+  order: 5;
 }
 
 .container-5 {
@@ -36,6 +40,7 @@
   background-color: orange;
   color: white;
   text-align: center;
+  order: 6;
 }
 
 .container-6 {
@@ -44,14 +49,16 @@
   background-color: brown;
   color: white;
   text-align: center;
+  order: 7;
 }
 
 .container-7 {
-  width: 100px;
-  height: 100px;
   background-color: green;
   color: white;
   text-align: center;
+  order: 3;
+  grid-area: 6 / 1 / span 2 / span 3;
+  height: 100px;
 }
 
 .container-8 {
@@ -60,15 +67,19 @@
   background-color: aqua;
   color: white;
   text-align: center;
+  order: 8;
 }
 
 .container-9 {
-  width: 100px;
-  height: 100px;
   background-color: aquamarine;
   color: white;
   text-align: center;
+  order: 2;
+  grid-area: 4 / 1 / span 2 / span 3;
+  height: 100px;
 }
 
 .parent {
-}  
+  display: grid;
+  grid-template-columns: repeat(3, 100px);
+}
